--- a/CV_.html
+++ b/CV_.html
@@ -119,7 +119,7 @@
                 <h3>廣告平台</h3>
                 <span>Google ads、LINE LAP、Facebook</span><br>
                 <h3>Web前後端</h3>
-                <span>HTML5、JavaScript、jQuery、RWD、Ajax、Boostrap、Servlet、JSP、MVC開發模式
+                <span>HTML5、CSS、JavaScript、jQuery、RWD、Ajax、Boostrap、Servlet、JSP、MVC開發模式
                 </span><br>
                 <h3>資料庫</h3>
                 <span>MySQL資料庫</span><br>
